tests/negative/symbols/uppercase-value.orng
fn main() -> Int {
    let X = 4
    X
}